--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Gautam Poudel | Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="PRO Card - Material Resume / CV / vCard Template" />
-    <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
+    <meta name="description" content="Gautam Poudel | Professional Business Analyst. Experienced busess analysis with strong research and analytical skills, management background and excellent communication skills is in search of a rewarding business analyst, financial analyst, project management position." />
+    <meta name="keywords" content="Professional Business Analyst, manager, ceo, financial officer" />
     <meta name="author" content="lmtheme" />
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -129,7 +129,6 @@
 
                 <div class="page-content">
                   <div class="row">
-
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <div class="about-me">
                         <div class="block-title">
@@ -144,10 +143,10 @@
 
                     <div class="col-sm-6 col-md-6 col-lg-6">
                       <ul class="info-list">
-                        <li><span class="title">Age</span><span class="value">29</span></li>
+                        <li><span class="title">Age</span><span class="value">40</span></li>
                         <li><span class="title">Residence</span><span class="value">Nadipur-Pokhara, Nepal</span></li>
                         <li><span class="title">Address</span><span class="value">Annapurna Rural Council, Nepal</span></li>
-                        <li><span class="title">e-mail</span><span class="value"><a href="mailto:poudelgautam@gmail.com"><span class="__cf_email__" data-cfemail="086d65696164486d70696578646d266b6765">[email&#160;protected]</span></a></span></li>
+                        <li><span class="title">E-mail</span><span class="value"><a href="mailto:poudelgautam@gmail.com"><span class="__cf_email__" data-cfemail="086d65696164486d70696578646d266b6765">[email&#160;protected]</span></a></span></li>
                         <li><span class="title">Phone</span><span class="value">+977-9862394953 | 9856028844</span></li>
                         <li><span class="title">Freelance</span><span class="value available">Unavailable</span></li>
                       </ul>
@@ -416,6 +415,45 @@
                   <h2>About</h2>
                 </div>
                 <div class="page-content">
+                  <div class="row">
+                    <div class="col-sm-12 col-md-12 col-lg-12">
+                      <div class="about-me">
+                        <div class="block-title">
+                          <h3>About <span>Me</span></h3>
+                        </div>
+                        <p>Hello! I’m Gautam Poudel. Experienced business analysis with strong research and analytical skills, management background and excellent communication skills is in search of a rewarding business analyst, financial analyst, project management position with a real estate agency in need of a transition from traditional practices to a program fit for the modern world</p>
+                        <p>After completing Masters of Business Studies (MBS) from Shankar Dev Campus in 2007, in first division, I have been keen interested in business and private sector organization that led me to involve in financial institutions, I have decided to join my career from local level development bank where I was appointed as management trainee in Muktinath Bikas Bank. After spending   couple of months in same position, bank authority appointed me as a branch manager in 2010. I handled the responsibilities of branch manager for five continuous years, organization has decided to transfer in internal audit department where I spent one more year and gained knowledge on internal control mechanism of organization. My thirst of having challenging positions drive me to switch the career in health sector. Currently, I am working in Metro City Hospital as Chief Executive Officer (CEO). Besides, I have listed in roster of social welfare council as a financial expert where I have rendered my expertise to carry out midterm evaluation of projects conducted by one of the reputed INGO, Care Nepal in 2014. Apart from these positions, I have also been working as a Head of Department, Management Faculty and part time lecturer of Business Studies in morning shift at Shree Amar Singh Model Secondary School, Pokhara Since 2010. In these 10 years, I have been holding numerous key positions, where I have demonstrated outstanding performance with professionalism, hard work and dedication. My commitment has always been recognized by top level management and I have been rewarded with promotion. After having a progressive track records in multi sectors I am actively seeking an opportunity in mutispeciality Hospital where i can demonstrate my knowledge,skill and expertise to serve the nation and full fill the burning needs of society. </p><br> 
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-6 col-md-6 col-lg-6">
+                      <div class="block-title">
+                        <h3>Personal <span>Bio</span></h3>
+                      </div>
+                      <ul class="info-list">
+                        <li><span class="title">Date of Birth</span><span class="value">Mar 22, 1980</span></li>
+                        <li><span class="title">R. Address</span><span class="value">Nadipur-Pokhara, Nepal</span></li>
+                        <li><span class="title">P. Address</span><span class="value">Annapurna Rural Council, Nepal</span></li>
+                        <li><span class="title">E-mail</span><span class="value"><a href="mailto:poudelgautam@gmail.com"><span class="__cf_email__" data-cfemail="086d65696164486d70696578646d266b6765">[email&#160;protected]</span></a></span></li>
+                        <li><span class="title">Phone</span><span class="value">+977-9862394953 | 9856028844</span></li>
+                        <li><span class="title">Freelance</span><span class="value available">Unavailable</span></li>
+                      </ul>
+                    </div>
+                    <div class="col-sm-6 col-md-6 col-lg-6">
+                      <br><br>
+                        <ul class="info-list">
+                        <li><span class="title">Gender: </span><span class="value">Male</span></li>
+                        <li><span class="title">Marital Status: </span><span class="value">Married</span></li>
+                        <li><span class="title">Religion: </span><span class="value">Hinduism</span></li>
+                        <li><span class="title">Nationality: </span><span class="value">Nepali</span></li>
+                        <li><span class="title">Language Known: </span><span class="value">Nepali, English, Hindi</span></li>
+                        <li><span class="title">Children: </span><span class="value">Yes</span></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                <div class="page-content">
                        
 
                   
@@ -539,7 +577,6 @@
     <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
     <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrDf32aQTCVENBhFJbMBKOUTiUAABtC2o"></script>
-    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>-->
     <script type="text/javascript" src="js/jquery.googlemap.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
