--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Gautam Poudel | Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Gautam Poudel | Professional Business Analyst. Experienced busess analysis with strong research and analytical skills, management background and excellent communication skills is in search of a rewarding business analyst, financial analyst, project management position." />
+    <meta name="description" content="Gautam Poudel | I am a Professional Business Analyst with strong research and analytical skills, management background and excellent communication skills." />
     <meta name="keywords" content="Professional Business Analyst, manager, ceo, financial officer" />
     <meta name="author" content="lmtheme" />
     <link rel="shortcut icon" href="favicon.ico">
@@ -137,7 +137,7 @@
                         <p>Hello! I’m Gautam Poudel. Experienced business analysis with strong research and analytical skills, management background and excellent communication skills is in search of a rewarding business analyst, financial analyst, project management position with a real estate agency in need of a transition from traditional practices to a program fit for the modern world</p>
                       </div>
                       <div class="download-resume">
-                        <a href="#" class="btn btn-secondary">Download Resume</a>
+                        <a href="cv/cv.pdf" target="_blank" class="btn btn-secondary">Download Resume</a>
                       </div>
                     </div>
 
@@ -394,8 +394,8 @@
                       <div class="block">
                         
                         <div class="center download-resume">
-                          <p class="text-center" style="color: rgb(180, 165, 148);">For detail download my latest CV.</p>
-                          <a href="#" class="btn btn-secondary">Download Resume</a>
+                          <p class="text-center" style="color: rgb(180, 165, 148);">For more detail here is my latest CV.</p>
+                          <a href="cv/cv.pdf" target="_blank" class="btn btn-secondary">Download Resume</a>
                         </div>
                       </div>
                     </div>
