meta data changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Gautam Poudel | Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="Gautam Poudel | I am a Professional Business Analyst with strong research and analytical skills, management background and excellent communication skills." />
+    <meta name="description" content="Gautam Poudel | Professional Business Analyst with strong research and analytical skills, management background and excellent communication skills." />
     <meta name="keywords" content="Professional Business Analyst, manager, ceo, financial officer" />
     <meta name="author" content="lmtheme" />
     <link rel="shortcut icon" href="favicon.ico">
