--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                     <div class="col-sm-8 col-md-8 col-lg-8">
                       <div class="title-block">
-                        <h1>Gautam Poudel</h1>
+                        <h1>Abhiyan Thapa Magar</h1>
                         <div class="owl-carousel text-rotation">                                    
                           <div class="item">
                             <div class="sp-subtitle">Business Analyst</div>
